# ffmpeg_engine

./: .gitignore  LICENSE  README.md  compress_video.py  conv_image.py  exemple.py  pympeg.sublime-project  pyproject.toml  readme.md
src/: __init__.py  builders.py  director.py  enums.py  flags.py  interfaces.py  runner.py  strategies.py
src/data/: read_json.py
src/pympeg/: __init__.py  builder.py  builders.py  constants.py  interfaces.py  runner.py
src/pympeg/data/: flags.json  read_json.py
src/pympeg/descriptors/: __init__.py  base_option.py  bitrate_option.py  bool_option.py  choice_option.py  dict_option.py  float_option.py  int_option.py  sample_rate_option.py  time_option.py  video_size_option.py
src/pympeg/options/: __init__.py  audio_input_options.py  audio_output_options.py  global_options.py  image_input_options.py  image_output_options.py  input_audio_options.py  input_image_options.py  input_options.py  input_video_options.py  output_audio_options.py  output_image_options.py  output_options.py  output_video_options.py  video_input_options.py
src/pympeg/utils/: validation.py
tests/: Makefile  test_builders.py  test_runner.py  test_strategies.py
tests/unit/: test_builders.py  test_flags.py  test_runner.py  test_strategies.py
tests/unit/desciptors/: test_descriptors.py
tests/unit/options/: test_audio_input_options.py  test_audio_output_options.py  test_global_options.py  test_image_input_options.py  test_image_output_options.py  test_input_audio_options.py  (+7 more)
utils/: compress_pdf.py  get_fps.py  rename_videos.py  time_video_listing.py
