[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FFmpeg-engine"
version = "0.1.0"
description = "Um wrapper Pythonico para FFMPEG usando Builder Pattern"
readme = "readme.md"
requires-python = ">=3.8"
authors = [
  { name="Pedro Ivo", email="pedroivoal1@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = ""

[tool.setuptools.packages.find]
where = ["src"]