[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pympeg"
version = "0.1.0"
description = "Um wrapper Pythonico para FFMPEG usando Builder Pattern"
readme = "readme.md"
requires-python = ">=3.10"
authors = [
  { name="Pedro Ivo", email="pedroivoal1@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.urls]
"Homepage" = "https://github.com/pedroivo1/ffmpeg_engine"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pympeg*"]
namespaces = false
